added materialize, navbar

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,1 +1,36 @@
-<h1>Hello</h1>
+<h1>Course Listing</h1>
+<ul>
+  <li>
+    Code: CS100
+  </li>
+  <li>
+    Name: Intro to CS
+  </li>
+  <li>
+    Desc: Thorough Intro to CS
+  </li>
+</ul>
+
+<ul>
+  <li>
+    Code: CS102
+  </li>
+  <li>
+    Name: Intro I to CS
+  </li>
+  <li>
+    Desc: Thorough Intro to CS 102
+  </li>
+</ul>
+
+<ul>
+  <li>
+    Code: CS103
+  </li>
+  <li>
+    Name: Intro II to CS
+  </li>
+  <li>
+    Desc: Thorough Intro to CS 103
+  </li>
+</ul>
