--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,29 +9,65 @@
   </head>
 
   <body>
-    <nav>
+    <header>
+      <nav>
+        <div class="container">
+          <div class="nav-wrapper">
+            <a href="#" class="brand-logo right">Tech University</a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+              <li>
+                <a href="#">Courses</a>
+              </li>
+              <li>
+                <a href="#">Enrollments</a>
+              </li>
+              <li>
+                <a href="#">Account</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <%= link_to 'home', root_path %>
+      <%= link_to 'about', about_path %>
+      <%= link_to 'new course', courses_new_path %>
+    </header>
+    <main>
       <div class="container">
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo right">Tech University</a>
-          <ul id="nav-mobile" class="left hide-on-med-and-down">
-            <li>
-              <a href="#">Courses</a>
-            </li>
-            <li>
-              <a href="#">Enrollments</a>
-            </li>
-            <li>
-              <a href="#">Account</a>
-            </li>
-          </ul>
+        <%= yield %>
+      </div>
+    </main>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Tech University</h5>
+            <p class="grey-text text-lighten-4">
+              The future of Development Training
+            </p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Info</h5>
+            <ul>
+              <li>
+                <a class="grey-text text-lighten-3" href="#!">Help</a>
+              </li>
+              <li>
+                <a class="grey-text text-lighten-3" href="#!">Careers</a>
+              </li>
+              <li>
+                <a class="grey-text text-lighten-3" href="#!">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-    </nav>
-    <%= link_to 'home', root_path %>
-    <%= link_to 'about', about_path %>
-    <%= link_to 'new course', courses_new_path %>
-    <div class="container">
-      <%= yield %>
-    </div>
+      <div class="footer-copyright">
+        <div class="container">
+          © 2018 GirlonaHike.com
+          <a class="grey-text text-lighten-4 right" href="#!">About</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
