--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,42 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
   <body>
     <header>
+      <ul id="dropdown1" class="dropdown-content">
+        <li>
+          <a href="#!">one</a>
+        </li>
+        <li>
+          <a href="#!">two</a>
+        </li>
+        <li class="divider"></li>
+        <li>
+          <a href="#!">three</a>
+        </li>
+      </ul>
+      <ul id="dropdown2" class="dropdown-content">
+        <li>
+          <a href="#!">one</a>
+        </li>
+        <li>
+          <a href="#!">two</a>
+        </li>
+        <li class="divider"></li>
+        <li>
+          <a href="#!">three</a>
+        </li>
+      </ul>
       <nav>
         <div class="container">
           <div class="nav-wrapper">
             <a href="#" class="brand-logo right">Tech University</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+              <i class="material-icons">menu</i>
+            </a>
             <ul id="nav-mobile" class="left hide-on-med-and-down">
               <li>
                 <a href="#">Courses</a>
@@ -22,7 +50,20 @@
                 <a href="#">Enrollments</a>
               </li>
               <li>
-                <a href="#">Account</a>
+                <a class="dropdown-trigger" href="#!" data-target="dropdown1">Account<i class="material-icons right">arrow_drop_down</i>
+                </a>
+              </li>
+            </ul>
+            <ul class="sidenav" id="mobile-demo">
+              <li>
+                <a href="#">Courses</a>
+              </li>
+              <li>
+                <a href="#">Enrollment</a>
+              </li>
+              <li>
+                <a class="dropdown-trigger" href="#!" data-target="dropdown2">Account<i class="material-icons right">arrow_drop_down</i>
+                </a>
               </li>
             </ul>
           </div>
