--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,52 +1,23 @@
 <div class="row">
   <div class="col s12">
     <h3 class="center">Course Listings</h3>
-    <div class="row">
-       <div class="col s12 m6">
-         <div class="card blue-grey darken-1">
-           <div class="card-content white-text">
-             <span class="card-title">Code: CS100</span>
-             <p>Name: Intro to CS</p>
-             <p>
-               Desc: Thorough Intro to CS
-             </p>
-           </div>
-           <div class="card-action">
-             <a href="#">Enroll</a>
-             <a href="#">Info</a>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="row">
-        <div class="col s12 m6">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Code: CS101</span>
-              <p>Name: Intro I to CS</p>
-              <p>
-                Desc: Thorough Intro I to CS
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="#">Enroll</a>
-              <a href="#">Info</a>
-            </div>
-          </div>
-        </div>
-         <div class="col s6 m6">
-           <div class="card blue-grey darken-1">
-             <div class="card-content white-text">
-               <span class="card-title">Code: CS102</span>
-               <p>Name: Intro II to CS</p>
-               <p>
-                 Desc: Thorough Intro to II CS
-               </p>
-             </div>
-             <div class="card-action">
-               <a href="#">Enroll</a>
-               <a href="#">Info</a>
-             </div>
-           </div>
-         </div>
+  </div>
+</div>
+
+<div class="row">
+  <%= Course.all.each do |course| %>
+  <div class="col s12 m6">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title"><%= course.short_name %>:
+          <%= course.name %></span>
+        <p><%= course.description %></p>
       </div>
+      <div class="card-action">
+        <a href="#">Enroll</a>
+        <a href="#">Info</a>
+      </div>
+    </div>
+  </div>
+<% end %>
+</div>
